# tg-spam-appeals-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  healthcheck.py  pyproject.toml
.github/workflows/: ci.yml
src/appeals_bot/: __init__.py  config.py  database.py  handlers.py  main.py  services.py  utils.py
tests/: README.md  conftest.py  test_database.py  test_handlers.py  test_handlers_branches.py  test_integration.py  test_services.py  test_utils.py  test_utils_more.py
